@@ -1,3 +1,8 @@
+Wed Jun 23 22:22:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* test/optparse/test_summary.rb: fixed superclass so that it run
+	  solely.
+
 Wed Jun 23 21:54:17 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
 	* marshal.c, test/ruby/test_marshal.rb: Revert r25230.  This test
